deploy/templates/customers-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customers-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: customers
  ports:
    - port: 5000
      targetPort: 5000
